--- a/famms-1.0.0/index.html
+++ b/famms-1.0.0/index.html
@@ -718,9 +718,9 @@
       </footer>
       <!-- footer end -->
       <div class="cpy_">
-         <p class="mx-auto">© 2021 All Rights Reserved By <a href="https://html.design/">Free Html Templates</a><br>
+         <p class="mx-auto">© 2021 All Rights Reserved By <a href="https://html.design/">Armeen Sultana</a><br>
          
-            Distributed By <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+            Distributed By <a href="https://themewagon.com/" target="_blank">Armeen Sultana</a>
          
          </p>
       </div>
